# clawamorphosis

./: .gitignore  BLOG_DRAFT.md  COVERAGE_ACTION_PLAN.md  README.md  claw.toml  clawpre.md  pyproject.toml
.github/workflows/: ci.yml
demos/: 01-the-mirror.sh  02-the-heist.sh  03-the-gauntlet.sh  README.md
docs/: CAM_COMMAND_DECISION_TREE.md  CAM_COMMAND_GUIDE.md  CAM_EXAMPLE_WORKFLOWS.md  CAM_OPERATOR_CHEATSHEET.md  CAM_PROVEN_CAPABILITIES.md
prompts/: capability-extract.md  novelty-potential.md  repo-mine.md  self-consume.md  synergy-analysis.md
src/claw/: cli.py  cycle.py  miner.py  self_consumer.py  verifier.py
src/claw/agents/: claude.py  codex.py  gemini.py  grok.py  interface.py
src/claw/core/: config.py  factory.py  models.py
src/claw/db/: embeddings.py  engine.py  repository.py  schema.sql
src/claw/evolution/: assimilation.py
src/claw/memory/: governance.py  hybrid_search.py  lifecycle.py  semantic.py
tests/: test_agents.py  test_assimilation.py  test_assimilation_delta_helpers.py  test_assimilation_report.py  test_cli_ux.py  test_config.py  test_core_models.py  test_cycle.py  test_db.py  test_embeddings.py  test_governance.py  test_kb.py  test_miner.py  test_novelty.py  test_openrouter.py  test_reassess_helpers.py  test_self_consumer.py  test_verifier.py
